@@ -13,6 +13,10 @@ User changes
 Bug fixes
 ---------
 
+- Fix computation of pressure gradient in lagrangian equations for some cases:
+  * retrieve 2/3*rho*k from P if an EVM turbulence model is enabled
+  * retrieve rho0*g from grad(P) even if iphydr=1.
+
 - Fix in post-processing of wrong user boundary conditions.
 
 - Fix implicit part of the Coriolis source term in the momentum
